fix: fin model style z-index

--- a/src/entities/calculator/ui/FinModel/FinModel.scss
+++ b/src/entities/calculator/ui/FinModel/FinModel.scss
@@ -325,6 +325,7 @@
 
   &__coins {
     position: absolute;
+    z-index: 1;
     top: calc(100% + 8px);
 
     border-radius: 12px;
